<resources>
    <string name="app_name">MovieApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    BottomBarHomeMenu-->
    <string name="title_menu_home">Início</string>
    <string name="title_menu_search">Pesquisar</string>
    <string name="title_menu_favorite">Favorite</string>
    <string name="title_menu_download">Downloads</string>
    <string name="title_menu_profile">Perfil</string>

    <!-- Fragment Onboarding XML -->
    <string name="fragment_onboarding_text_btn">Get Started</string>


    <!--    HomeAuthFragment-->
    <string name="title_home_auth_fragment">Let\'s you in</string>
    <string name="button_continue_with_facebook_home_auth_fragment">Continue with Facebook</string>
    <string name="button_continue_with_google_home_auth_fragment">Continue with Google</string>
    <string name="text_social_or_password_home_auth_fragment">or</string>
    <string name="button_sign_in_with_password_home_auth_fragment">Sign In with password</string>
    <string name="text_dont_have_an_account_home_auth_fragment">Don´t have an account?</string>
    <string name="text_sign_up_home_auth_fragment">Sign up</string>
    <string name="todo">TODO</string>

    <!--    RegisterFragment-->
    <string name="title_register_fragment">Create Your Account</string>
    <string name="text_hint_edit_email_register_fragment">Email</string>
    <string name="text_hint_edit_password_register_fragment">Password</string>
    <string name="text_button_sign_up_register_fragment">Sign Up</string>
    <string name="text_continue_social_network_register_fragment">or continue with</string>
    <string name="text_already_account_register_fragment">já tem uma conta?</string>
    <string name="text_button_sign_in_register_fragment">Create account</string>
    <string name="text_email_empty_register_fragment">Digite um e-mail válido</string>
    <string name="text_password_empty_register_fragment">Digite uma senha</string>
    <string name="text_register_sucess_register_fragment">Cadastro realizado com sucesso!</string>


    <!--    LoginFragment-->
    <string name="title_login_fragment">Login to Your Account</string>
    <string name="text_hint_edit_email_login_fragment">Email</string>
    <string name="text_hint_edit_password_login_fragment">Password</string>
    <string name="text_button_sign_in_login_fragment">Sign In</string>
    <string name="text_forgot_password_login_fragment">Forgot the password ?</string>
    <string name="text_continue_social_network_login_fragment">or continue with</string>
    <string name="text_account_error_password_email_login_fragment">Email e senha não confere verifique e tente novamente.</string>


    <!--    ForgotFragment-->
    <string name="title_forgot_fragment">Crie sua nova senha</string>
    <string name="text_hint_edit_email_forgot_fragment">Email</string>
    <string name="text_button_forgot_fragment">Recover account</string>
    <string name="text_send_email_sucess_forgot_fragment">Email enviado com sucesso!</string>


    <!--    Generic-->
    <string name="text_name_empty">Digite seu nome</string>
    <string name="text_email_empty">Digite seu e-mail</string>
    <string name="text_email_empty_invalid">Digite um e-mail valido</string>
    <string name="text_phone_empty">Digite seu telefone</string>
    <string name="text_phone_invalid">Digite um telefone válido</string>
    <string name="text_password_empty">Digite sua senha</string>
    <string name="error_generic">Ocorreu um erro, por favor tente novamente mais tarde.</string>
    <string name="text_formated_value">R$ %1$s</string>

    <!--    Erros Firebase Authentication-->
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail.</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>
    <string name="error_user_not_found">Usuario não encontrado !</string>

    <!-- MovieGenreFragment -->
    <string name="search_hint">Search Something…</string>


    <!-- GenreItem-->
    <string name="text_show_all_genre_item">Ver todos</string>

    <!-- MovieDetailsFragment -->

    <!-- TAB LAYOUT -->
    <!-- TrailerFragment -->
    <string name="title_trailerFragment">Trailers</string>
    <!-- CommentsFragment -->
    <string name="title_CommentsFragment">Comentarios</string>

    <!-- SimilarFragment -->
    <string name="title_SimilarFragment">Similares</string>


    <!--    SearchFragment-->
    <string name="text_title_empty_search_fragment">Não encontrado</string>
    <string name="text_message_empty_search_fragment">Desculpe, a palavra-chave que você digitou não foi encontrada. Tente verificar novamente ou pesquise com outras palavras-chave.</string>


    <!--    DialogDownloading-->
    <string name="text_title_dialog_downloading">Download</string>
    <string name="text_message_dialog_downloading">Filmes ainda baixando...\nAguarde ou oculte o processo</string>
    <string name="text_hide_dialog_downloading">Esconder</string>
    <string name="text_downloaded_size_dialog_downloading">%1$s / %2$s</string>
    <string name="text_download_progress_dialog_downloading">%1$d%%</string>


    <!-- BottomSheet -->
    <string name="text_delete_movie_bottom_sheet">Delete</string>
    <string name="text_delete_answer_bottom_sheet">Você tem certeza que deseja excluir o download desse filme?</string>
    <string name="text_cancel_movie_bottom_sheet">Cancelar</string>
    <string name="text_title_movie_bottom_sheet">Deletar</string>


    <!--    ProfileFragment-->
    <string name="text_edit_profile_profile_fragment">Editar perfil</string>
    <string name="text_notification_profile_fragment">Notificações</string>
    <string name="text_download_profile_fragment">Downloads</string>
    <string name="text_security_profile_fragment">Segurança</string>
    <string name="text_language_profile_fragment">Idioma</string>
    <string name="text_darkmode_profile_fragment">Modo Escuro</string>
    <string name="text_helper_center_profile_fragment">Centro de ajuda</string>
    <string name="text_privacy_policy_profile_fragment">Política de privacidade</string>
    <string name="text_logout_profile_fragment">Sair</string>


    <!-- BottomSheet Logout -->
    <string name="text_title_bottom_sheet_sheet_logout">Sair</string>
    <string name="text_message_bottom_sheet_logout">Tem certeza que deseja sair?</string>
    <string name="text_cancel_bottom_sheet_logout">Cancelar</string>
    <string name="text_confirm_bottom_sheet_logout">Sim, sair</string>


    <!-- EditProfile  XML-->
    <string name="fragment_edit_text_editarPerfil">Editar Perfil</string>
    <string name="fragment_edit_text_atualizar">Atualizar</string>
    <string name="fragment_edit_text_firstName">primeiro novo</string>
    <string name="fragment_edit_text_secondName">sobrenome</string>
    <string name="fragment_edit_text_phone">telefone</string>
    <string name="fragment_edit_text_pais">pais</string>
    <string name="fragment_edit_text_genre">gênero</string>

    <!-- EdiProfile Fragment-->
    <string name="fill_all_fields">Todos os campos precisam ser preenchidos.</string>
    <string name="fragment_edit_text_success">Atualizado com sucesso</string>


    <!-- Bottom sheet config Permition -->
    <string name="text_title_bottom_sheet_permition_denied">Permissão negada</string>
    <string name="text_title_bottom_sheet_permition_active">Para acessar o recurso ative a permissão nas configurações</string>
    <string name="text_title_bottom_sheet_permition_cancel">Cancelar</string>
    <string name="text_title_bottom_sheet_permition_accept">Aceitar</string>

</resources>